--- a/assets/css/translator.css
+++ b/assets/css/translator.css
@@ -56,8 +56,11 @@
 
 html, body {
   width: 100%;
-  max-width: 100vw;
-  overflow-x: hidden;
+  height: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
